# FICSIT-Fred

./: .dockerignore  .gitattributes  .gitignore  BackupConfig.json  Dockerfile  LICENSE  README.md  SECURITY.md  cspell.json  docker-compose-deps.yml  docker-compose.yml  example.env  exampledb.sql  examplepayloads.json  pyproject.toml  requirements.txt  runtime-deps.sh
.github/workflows/: docker-publish.yml
Images/: Thumbs.db
Scripts/: Bans.json  Commands.py  Config.json  CreateEmbed.py  Helper.py  Main.py  WebhookListener.py  client.config.json  requirements.txt
Scripts/config/: config.json
bot/: bot.py  config.py  fred_core_imports.py
bot/cogs/: commands.py  crashes.py  dialogflow.py  levelling.py  mediaonly.py  noshorturl.py  webhooklistener.py  welcome.py
bot/librairies/: createembed.py
bot/libraries/: common.py  createembed.py  fred_help.py  helper.py
config/: config_example.json
docker/: Dockerfile  exampledb.sql  runtime-deps.sh
fred/: __init__.py  __main__.py  bot.py  config.py  fred.py  owo.py
fred/cogs/: __init__.py  commands.py  crashes.py  dialogflow.py  levelling.py  mediaonly.py  webhooklistener.py  welcome.py
fred/fred_commands/: __init__.py  _baseclass.py  _command_utils.py  bot_meta.py  channels.py  crashes.py  dbcommands.py  dialogflow.py  experience.py  help.py
fred/libraries/: __init__.py  common.py  content_manager.py  createembed.py  helper.py  ocr.py  owo.py  regex_util.py
fred/libraries/view/: mod_picker.py
fred/migrations/: 0-example_migration.down.sql  0-example_migration.up.sql  1-drop_full_name_from_users.sql  2-rm-dialogflow.sql
testing/: embeds.py  push.json
