[tool.poetry]
name = "fred"
version = "2.22.10"
description = "A Discord bot for the Satisfactory Modding Discord "
authors = ["Feyko <feykook@gmail.com>", "Mircea Roata <mircearoatapalade@yahoo.ro>", "Borketh <does.not.kompute@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.12"
nextcord = {extras = ["speed"], version = "^2.6.0"}
Pillow = "^10.4.0"
pytesseract = "^0.3.8"
python-dotenv = "^1.0.0"
algoliasearch = "^3.0.0"
SQLObject = "^3.9.1"
google-cloud-dialogflow = "^2.11.0"
aiohttp = "^3.10.0"
setuptools = "^72.1.0"
psycopg2-binary = "^2.9.9"
semver = "^3.0.2"
pyre2-updated = "^0.3.8"
regex = "^2024.7.24"

[tool.poetry.group.dev.dependencies]
black = {extras = ["d"], version = "^24.8.0"}
jsonpickle = "^3.0.0"

[tool.poetry.scripts]
fred = "fred.__main__:main"

[tool.black]
line-length = 120
target-version = ['py312']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
