[tool.poetry]
name = "fred"
version = "2.26.0"
description = "A Discord bot for the Satisfactory Modding Discord "
authors = ["Feyko <feykook@gmail.com>", "Borketh <does.not.kompute@gmail.com>", "Mircea Roata <mircearoatapalade@yahoo.ro>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.12.0"
nextcord = { extras = ["speed"], version = "^3.0.1" }
Pillow = "^11.0.0"
pytesseract = "^0.3.13"
python-dotenv = "^1.0.1"
algoliasearch = "^4.11.2"
SQLObject = "^3.12.0"
aiohttp = "^3.12.14"
semver = "^3.0.2"
regex = "^2025"
psycopg = { extras = ["binary"], version = "^3.2.3" }
pyre2 = "^0.3.10"

[tool.poetry.group.dev.dependencies]
black = { extras = ["d"], version = "^24.8.0" }
jsonpickle = "^3.0.0"

[tool.poetry.scripts]
fred = "fred.__main__:main"

[tool.black]
line-length = 120
target-version = ['py312']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
